--- a/BACKEND/public/css/style.css
+++ b/BACKEND/public/css/style.css
@@ -1176,9 +1176,10 @@ h2,
 /* ========================================================= */
 
 .footer {
-  max-height: 500px;
   background: #d9d9d9;
   padding: 20px 80px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .footer-content {
